--- a/app/globals.css
+++ b/app/globals.css
@@ -63,3 +63,18 @@ body,
     @apply bg-background text-foreground;
   }
 }
+
+.cl-internal-rx251b {
+  box-shadow: none !important;
+  margin: 0;
+  /* max-width: 100%; */
+  overflow-x: hidden;
+}
+
+.cl-internal-2tn0z0,
+.cl-internal-phfxlr,
+.cl-internal-rx251b {
+  max-width: 100%;
+  /* width: 100vw; */
+/* margin: 0; */
+}
