Course Category Form

--- a/app/globals.css
+++ b/app/globals.css
@@ -96,3 +96,5 @@ body,
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
 }
+
+@import "~@uploadthing/react/styles.css"
