Improve Teacher Dashboard Design

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,7 +42,7 @@ body,
     --secondary: 210 3% 12%;
     --secondary-foreground: 140 3% 77%;
 
-    --accent: 250deg 10% 29%;
+    --accent: 120 4% 22%;
     --accent-foreground: 0 0% 98%;
     
     --border: 210 4% 22%;
